WIP adding step return statement handling

--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
     "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
-    "                    has_metaflow_param=False,\n",
+    "                    has_metaflow_param=True,\n",
     "                    is_json_type=False,\n",
     "                    persist_type=\"pickle\",\n",
     "                )\n",
@@ -252,7 +252,7 @@
     "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=False,\n",
-    "                has_metaflow_param=True,\n",
+    "                has_metaflow_param=False,\n",
     "                is_json_type=False,\n",
     "                persist_type=\"unsupported\",\n",
     "            )\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,10 +310,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gensim.summarization.textcleaner:'pattern' package found; tag filters are available for English\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_top2vec.ipynb\")\n",
+    "params = params_as_dict(nb_path)\n",
+    "param_meta = extract_param_meta(\"sciflow.test.test_top2vec\", params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['traffic_percent', 'speed', 'workers', 'dremio_access'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_meta.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParamMeta(instance_type=<class 'data_access.dremio_access.DremioAccess'>, is_scalar=False, has_metaflow_param=False, is_json_type=False, persist_type='unsupported')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_meta[\"dremio_access\"]"
+   ]
   },
   {
    "cell_type": "code",
