--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_path = Path(os.path.join(\"test\", \"test_top2vec.ipynb\"))\n",
+    "nb = read_nb(nb_path)\n",
+    "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
+    "test_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
+    "steps = extract_steps(test_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FuncDetails(name='preprocess', docstring=None, args='dremio_access,model_level,min_date,traffic_percent', has_return=False, code='\\n\\ndef preprocess(dremio_access, model_level, min_date, traffic_percent):\\n    data = get_utterances(dremio_access, model_level, min_date, traffic_percent)\\n    button_filter = get_button_responses_filter(dremio_access)\\n    user_texts = data[~data.Utterance.isin(button_filter)].copy()\\n    documents = user_texts.Utterance.tolist()\\n    return documents\\n\\n')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steps[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,14 +521,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gensim.summarization.textcleaner:'pattern' package found; tag filters are available for English\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Converted test_top2vec.ipynb to TestTop2VecFlow in: test_top2vec.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
       "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
@@ -499,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,27 +568,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def check_flows(config):\n",
+    "def check_flows(config, flow_command=\"show\"):\n",
     "    flow_results = {}\n",
     "    flows_dir = config.path(\"flows_path\")\n",
     "    for flow_path in os.listdir(flows_dir):\n",
     "        flow_name = os.path.basename(flow_path)\n",
     "        if flow_path.endswith(\".py\"):\n",
-    "            ret_code, output = check_flow(flows_dir, flow_path)\n",
+    "            ret_code, output = check_flow(\n",
+    "                flows_dir, flow_path, flow_command=flow_command\n",
+    "            )\n",
     "            flow_results[flow_name] = ret_code, output\n",
     "            if ret_code == 0:\n",
     "                print(f\"Flow: {flow_name} verified\")\n",
@@ -543,32 +593,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def check_flow(flows_dir, flow_module):\n",
+    "def prep_mf_env():\n",
     "    if \"USER\" not in os.environ:\n",
     "        try:\n",
     "            os.environ[\"USER\"] = os.environ[\"GIT_COMMITTER_NAME\"]\n",
     "        except KeyError:\n",
     "            raise EnvironmentError(\n",
     "                \"Metaflow requires a known user for tracked execution. Add USER or GIT_COMMITTER_NAME to Jupyter environment variables\"\n",
-    "            )\n",
-    "    script = f\"python '{os.path.join(flows_dir, flow_module)}' show\"\n",
-    "    pipe = subprocess.Popen(\n",
-    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
-    "    )\n",
-    "    output = pipe.communicate()[0]\n",
-    "    return pipe.returncode, output.decode(\"utf-8\").strip()"
+    "            )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def run_shell_cmd(script):\n",
+    "    pipe = subprocess.Popen(\n",
+    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
+    "    )\n",
+    "    output = pipe.communicate()[0]\n",
+    "    return pipe, output.decode(\"utf-8\").strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def check_flow(flows_dir, flow_module, flow_command=\"show\"):\n",
+    "    prep_mf_env()\n",
+    "    script = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command}\"\n",
+    "    pipe, output = run_shell_cmd(script)\n",
+    "    return pipe.returncode, output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +653,9 @@
      "output_type": "stream",
      "text": [
       "Flow: test_module.py verified\n",
-      "Flow: test_data_handling.py verified\n"
+      "Flow: test_data_handling.py verified\n",
+      "Flow: test_top2vec.py verified\n",
+      "Flow: test_export.py verified\n"
      ]
     }
    ],
@@ -586,7 +665,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flow: test_module.py verified\n",
+      "Flow: test_data_handling.py verified\n",
+      "Flow: test_top2vec.py verification failed\n",
+      "Details:\n",
+      "Metaflow 2.2.7 executing TestTop2VecFlow for user:e02079\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n",
+      "2021-04-10 07:06:38.528 Workflow starting (run-id 1618038398524406):\n",
+      "2021-04-10 07:06:38.539 [1618038398524406/start/1 (pid 1444)] Task is starting.\n",
+      "2021-04-10 07:06:46.143 [1618038398524406/start/1 (pid 1444)] Task finished successfully.\n",
+      "2021-04-10 07:06:46.155 [1618038398524406/preprocess/2 (pid 1463)] Task is starting.\n",
+      "2021-04-10 07:06:52.869 [1618038398524406/preprocess/2 (pid 1463)] <flow TestTop2VecFlow step preprocess> failed:\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     Internal error\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)] Traceback (most recent call last):\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 930, in main\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     start(auto_envvar_prefix='METAFLOW', obj=state)\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 829, in __call__\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     return self.main(args, kwargs)\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 782, in main\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     rv = self.invoke(ctx)\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1259, in invoke\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1066, in invoke\n",
+      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return ctx.invoke(self.callback, ctx.params)\n",
+      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 610, in invoke\n",
+      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return callback(args, kwargs)\n",
+      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/decorators.py\", line 33, in new_func\n",
+      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return f(get_current_context().obj, args, kwargs)\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 447, in step\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     max_user_code_retries)\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 396, in run_step\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     self._exec_step_function(step_func)\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 47, in _exec_step_function\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     step_function()\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/git/sciflow/nbs/test/flows/test_top2vec.py\", line 19, in preprocess\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     preprocess(self.dremio_access, model_level, min_date, self.traffic_percent)\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/flowspec.py\", line 129, in __getattr__\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     (self.name, name))\n",
+      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)] AttributeError: Flow TestTop2VecFlow has no attribute 'dremio_access'\n",
+      "2021-04-10 07:06:53.837 [1618038398524406/preprocess/2 (pid 1463)] \n",
+      "2021-04-10 07:06:53.837 [1618038398524406/preprocess/2 (pid 1463)] Task failed.\n",
+      "2021-04-10 07:06:53.838 Workflow failed.\n",
+      "2021-04-10 07:06:53.838 Terminating 0 active tasks...\n",
+      "2021-04-10 07:06:53.838 Flushing logs...\n",
+      "    Step failure:\n",
+      "    Step preprocess (task-id 2) failed.\n",
+      "Flow: test_export.py verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_flows(Config(cfg_name=\"test/settings.ini\"), \"--no-pylint run\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,6 +738,20 @@
     "@call_parse\n",
     "def sciflow_check_flows():\n",
     "    check_flows(Config())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_run_flows():\n",
+    "    check_flows(Config(), \"--no-pylint run\")"
    ]
   },
   {
