--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "import ast\n",
     "import os\n",
+    "import re\n",
     "from dataclasses import asdict, dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,6 @@
     "        self.docstring = ast.get_docstring(node)\n",
     "        self.args = node.args.args\n",
     "        self.arg_names = [a.arg for a in node.args.args]\n",
-    "        self.returns = node.returns\n",
     "        self.generic_visit(node)\n",
     "\n",
     "\n",
@@ -116,38 +117,60 @@
     "    docstring: str\n",
     "    args: str\n",
     "    has_return: bool\n",
+    "    return_stmt: str\n",
     "    code: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def parse_step(step_code: str):\n",
-    "    tree = ast.parse(step_code)\n",
-    "    lister = FuncLister()\n",
-    "    lister.visit(tree)\n",
-    "    if \"name\" not in lister.__dict__:\n",
-    "        raise (\n",
-    "            ValueError(\"Step must have a single valid function; check step definition\")\n",
+    "def extract_return_stmt(code):\n",
+    "    return_stmt = [\n",
+    "        l.strip().split(\"return\")[1].strip()\n",
+    "        for l in code.splitlines()\n",
+    "        if l.strip().startswith(\"return\")\n",
+    "    ]\n",
+    "    if len(return_stmt) == 0:\n",
+    "        return\n",
+    "    return_stmt = return_stmt[0]\n",
+    "    is_named_variable = bool(re.search(\"^[a-zA-Z0-9_]+$\", return_stmt))\n",
+    "    if not is_named_variable:\n",
+    "        raise NotImplementedError(\n",
+    "            \"Sciflow does not yet support inline return statements. Assign the return value to a variable before returning.\"\n",
     "        )\n",
-    "    return FuncDetails(\n",
-    "        lister.name,\n",
-    "        lister.docstring,\n",
-    "        \",\".join(lister.arg_names),\n",
-    "        lister.returns is not None,\n",
-    "        step_code,\n",
-    "    )"
+    "    return return_stmt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "named_return = \"\"\"\n",
+    "def preprocess(dremio_access, model_level, min_date, traffic_percent):\n",
+    "    data = get_utterances(dremio_access, model_level, min_date, traffic_percent)\n",
+    "    button_filter = get_button_responses_filter(dremio_access)\n",
+    "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
+    "    documents = user_texts.Utterance.tolist()\n",
+    "    return documents\n",
+    "\"\"\"\n",
+    "\n",
+    "unnamed_return = \"\"\"\n",
+    "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
+    "    return Top2Vec(documents, workers=workers, speed=speed)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +194,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert extract_return_stmt(named_return) == \"documents\"\n",
+    "assert extract_return_stmt(valid_code_block) is None\n",
+    "try:\n",
+    "    extract_return_stmt(unnamed_return)\n",
+    "except NotImplementedError as e:\n",
+    "    assert e is not None"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def parse_step(step_code: str):\n",
+    "    tree = ast.parse(step_code)\n",
+    "    lister = FuncLister()\n",
+    "    lister.visit(tree)\n",
+    "    if \"name\" not in lister.__dict__:\n",
+    "        raise (\n",
+    "            ValueError(\"Step must have a single valid function; check step definition\")\n",
+    "        )\n",
+    "    return FuncDetails(\n",
+    "        lister.name,\n",
+    "        lister.docstring,\n",
+    "        \",\".join(lister.arg_names),\n",
+    "        lister.has_return,\n",
+    "        extract_return_stmt(step_code),\n",
+    "        step_code,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert \"documents\" == parse_step(named_return).return_stmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def _convert_return_stmt(numbered_step):\n",
+    "    number, step = numbered_step\n",
+    "    step[\"return_stmt\"] = \"\" if not step[\"return_stmt\"] else step[\"return_stmt\"]\n",
+    "    return number, step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,14 +301,14 @@
     "    numbered_steps = zip(node_ids, [asdict(step) for step in steps])\n",
     "\n",
     "    dag = nx.Graph()\n",
-    "    dag.add_nodes_from(numbered_steps)\n",
+    "    dag.add_nodes_from([_convert_return_stmt(s) for s in numbered_steps])\n",
     "    dag.add_edges_from(list(zip(node_ids, node_ids[1:])))\n",
     "    return dag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
