Working flow generation with advanced local params.

--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def extract_return_stmt(code):\n",
+    "def extract_return_stmt(func_name, code):\n",
     "    return_stmt = [\n",
     "        l.strip().split(\"return\")[1].strip()\n",
     "        for l in code.splitlines()\n",
@@ -139,17 +139,17 @@
     "    if len(return_stmt) == 0:\n",
     "        return\n",
     "    return_stmt = return_stmt[0]\n",
-    "    is_named_variable = bool(re.search(\"^[a-zA-Z0-9_]+$\", return_stmt))\n",
+    "    is_named_variable = bool(re.search(\"^[a-zA-Z]+[a-zA-Z0-9_]*$\", return_stmt))\n",
     "    if not is_named_variable:\n",
     "        raise NotImplementedError(\n",
-    "            \"Sciflow does not yet support inline return statements. Assign the return value to a variable before returning.\"\n",
+    "            f\"Inline return statements are not supported. Assign the return value of {func_name} to a variable before returning.\"\n",
     "        )\n",
     "    return return_stmt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +165,17 @@
     "unnamed_return = \"\"\"\n",
     "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
     "    return Top2Vec(documents, workers=workers, speed=speed)\n",
+    "\"\"\"\n",
+    "\n",
+    "number_return = \"\"\"\n",
+    "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
+    "    return 1\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,21 +199,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert extract_return_stmt(named_return) == \"documents\"\n",
-    "assert extract_return_stmt(valid_code_block) is None\n",
+    "assert extract_return_stmt(\"train\", named_return) == \"documents\"\n",
+    "assert extract_return_stmt(\"train\", valid_code_block) is None\n",
     "try:\n",
-    "    extract_return_stmt(unnamed_return)\n",
+    "    extract_return_stmt(\"train\", number_return)\n",
+    "except NotImplementedError as e:\n",
+    "    assert e is not None\n",
+    "try:\n",
+    "    extract_return_stmt(\"train\", unnamed_return)\n",
     "except NotImplementedError as e:\n",
     "    assert e is not None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +237,14 @@
     "        lister.docstring,\n",
     "        \",\".join(lister.arg_names),\n",
     "        lister.has_return,\n",
-    "        extract_return_stmt(step_code),\n",
+    "        extract_return_stmt(lister.name, step_code),\n",
     "        step_code,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
