--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
     "\n",
     "def first(some_param: int):\n",
     "    print(some_param)\n",
-    "    return some_param"
+    "    anohter_int = some_param + 5\n",
+    "    return anohter_int"
    ]
   },
   {
