--- a/nbs/test/test_top2vec.ipynb
+++ b/nbs/test/test_top2vec.ipynb
@@ -288,7 +288,8 @@
     "\n",
     "\n",
     "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
-    "    return Top2Vec(documents, workers=workers, speed=speed)"
+    "    model = Top2Vec(documents, workers=workers, speed=speed)\n",
+    "    return model"
    ]
   },
   {
@@ -515,11 +516,12 @@
     "    as_many_items_as_topics = (\n",
     "        model.get_num_topics() == len(topic_words) == word_scores.shape[0]\n",
     "    )\n",
-    "    return (\n",
+    "    results = (\n",
     "        topic_contains_non_empty_words\n",
     "        and word_scores_in_range\n",
     "        and as_many_items_as_topics\n",
-    "    )"
+    "    )\n",
+    "    return results"
    ]
   },
   {
