--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,15 +81,20 @@
     "\n",
     "\n",
     "def load_dremio_access():\n",
-    "    shell_source(\"/home/jovyan/.profile\")\n",
-    "    if \"DREMIO_PWD\" in os.environ:\n",
-    "        DremioAccess._get_dremio_password = lambda x: os.environ[\"DREMIO_PWD\"]\n",
+    "    if os.path.exists('/home/jovyan/.auth/dremio'):\n",
+    "        with open('/home/jovyan/.auth/dremio', 'r') as pat_file:\n",
+    "            pat = pat_file.read().strip()\n",
+    "            DremioAccess._get_dremio_password = lambda x: pat\n",
+    "    else:\n",
+    "        shell_source(\"/home/jovyan/.profile\")\n",
+    "        if \"DREMIO_PWD\" in os.environ:\n",
+    "            DremioAccess._get_dremio_password = lambda x: os.environ[\"DREMIO_PWD\"]\n",
     "    return DremioAccess()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
