--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,27 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FuncDetails(name='preprocess', docstring=None, args='dremio_access,model_level,min_date,traffic_percent', has_return=False, code='\\n\\ndef preprocess(dremio_access, model_level, min_date, traffic_percent):\\n    data = get_utterances(dremio_access, model_level, min_date, traffic_percent)\\n    button_filter = get_button_responses_filter(dremio_access)\\n    user_texts = data[~data.Utterance.isin(button_filter)].copy()\\n    documents = user_texts.Utterance.tolist()\\n    return documents\\n\\n')"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "steps[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +223,7 @@
     "        return\n",
     "    orig_step_names = [step.name for step in steps]\n",
     "    if len(steps) == 1:\n",
-    "        steps.append(FuncDetails(\"end\", None, None, False, \"pass\"))\n",
+    "        steps.append(FuncDetails(\"end\", None, None, False, \"\", \"pass\"))\n",
     "    params = params_as_dict(nb_path)\n",
     "    if len(params) == 0:\n",
     "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,21 +375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def format_arg(arg, param_meta):\n",
+    "def format_arg(arg, param_meta, returned_params):\n",
     "    result = arg\n",
-    "    if arg in param_meta and param_meta[arg].has_metaflow_param:\n",
+    "    if (arg in param_meta and param_meta[arg].has_metaflow_param) or arg in returned_params:\n",
     "        result = \"self.\" + arg\n",
     "    return result\n",
     "\n",
     "\n",
     "def write_steps(flow_file, steps, orig_step_names, param_meta, single_indent):\n",
+    "    returned_params = []\n",
     "    for i, step in enumerate(steps):\n",
     "        flow_file.write(f\"{single_indent}@step\\n\")\n",
     "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
@@ -411,11 +401,15 @@
     "            flow_step_args = \"\"\n",
     "            if len(step.args) > 0:\n",
     "                flow_step_args = \", \".join(\n",
-    "                    [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
+    "                    [format_arg(a, param_meta, returned_params) for a in step.args.split(\",\")]\n",
     "                )\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
-    "            )\n",
+    "            if not step.has_return:\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\")\n",
+    "            else:\n",
+    "                if step.return_stmt in returned_params or step.return_stmt in param_meta:\n",
+    "                    raise ValueError(f'[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique')\n",
+    "                returned_params.append(step.return_stmt)\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}self.{step.return_stmt} = {orig_step_names[i]}({flow_step_args})\\n\")\n",
     "        else:\n",
     "            flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
     "        if i < len(steps) - 1:\n",
@@ -427,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,27 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:gensim.summarization.textcleaner:'pattern' package found; tag filters are available for English\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
       "Converted test_top2vec.ipynb to TestTop2VecFlow in: test_top2vec.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
       "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
@@ -554,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -674,50 +655,7 @@
      "text": [
       "Flow: test_module.py verified\n",
       "Flow: test_data_handling.py verified\n",
-      "Flow: test_top2vec.py verification failed\n",
-      "Details:\n",
-      "Metaflow 2.2.7 executing TestTop2VecFlow for user:e02079\n",
-      "Validating your flow...\n",
-      "    The graph looks good!\n",
-      "2021-04-10 07:06:38.528 Workflow starting (run-id 1618038398524406):\n",
-      "2021-04-10 07:06:38.539 [1618038398524406/start/1 (pid 1444)] Task is starting.\n",
-      "2021-04-10 07:06:46.143 [1618038398524406/start/1 (pid 1444)] Task finished successfully.\n",
-      "2021-04-10 07:06:46.155 [1618038398524406/preprocess/2 (pid 1463)] Task is starting.\n",
-      "2021-04-10 07:06:52.869 [1618038398524406/preprocess/2 (pid 1463)] <flow TestTop2VecFlow step preprocess> failed:\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     Internal error\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)] Traceback (most recent call last):\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 930, in main\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     start(auto_envvar_prefix='METAFLOW', obj=state)\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 829, in __call__\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     return self.main(args, kwargs)\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 782, in main\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     rv = self.invoke(ctx)\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1259, in invoke\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]     return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
-      "2021-04-10 07:06:52.870 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1066, in invoke\n",
-      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return ctx.invoke(self.callback, ctx.params)\n",
-      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 610, in invoke\n",
-      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return callback(args, kwargs)\n",
-      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/decorators.py\", line 33, in new_func\n",
-      "2021-04-10 07:06:52.871 [1618038398524406/preprocess/2 (pid 1463)]     return f(get_current_context().obj, args, kwargs)\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 447, in step\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     max_user_code_retries)\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 396, in run_step\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     self._exec_step_function(step_func)\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 47, in _exec_step_function\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     step_function()\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/git/sciflow/nbs/test/flows/test_top2vec.py\", line 19, in preprocess\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     preprocess(self.dremio_access, model_level, min_date, self.traffic_percent)\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/flowspec.py\", line 129, in __getattr__\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)]     (self.name, name))\n",
-      "2021-04-10 07:06:53.836 [1618038398524406/preprocess/2 (pid 1463)] AttributeError: Flow TestTop2VecFlow has no attribute 'dremio_access'\n",
-      "2021-04-10 07:06:53.837 [1618038398524406/preprocess/2 (pid 1463)] \n",
-      "2021-04-10 07:06:53.837 [1618038398524406/preprocess/2 (pid 1463)] Task failed.\n",
-      "2021-04-10 07:06:53.838 Workflow failed.\n",
-      "2021-04-10 07:06:53.838 Terminating 0 active tasks...\n",
-      "2021-04-10 07:06:53.838 Flushing logs...\n",
-      "    Step failure:\n",
-      "    Step preprocess (task-id 2) failed.\n",
+      "Flow: test_top2vec.py verified\n",
       "Flow: test_export.py verified\n"
      ]
     }
@@ -728,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
