--- a/nbs/test/test_export.ipynb
+++ b/nbs/test/test_export.ipynb
@@ -56,8 +56,7 @@
     "    :param some_params: this is a first param\n",
     "    :returns: this is a description of what is returned\n",
     "    \"\"\"\n",
-    "    print(some_params)\n",
-    "    return some_params"
+    "    print(some_params)"
    ]
   },
   {
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,8 @@
     "def last(some_param: None):\n",
     "    \"\"\"\n",
     "    Clean up and close connections\"\"\"\n",
-    "    return 1"
+    "    one = 1\n",
+    "    return one"
    ]
   },
   {
